--- a/lib/cg_exportplink.wiki
+++ b/lib/cg_exportplink.wiki
@@ -39,7 +39,9 @@ included in the result.
 ; -c 1/0: code genotypes to numbers (reference = 1, alternative allele = 2).
 ; -samples samples: Only write data for the given samples to the file, if
 a sample is not present in the varfile, all genotypes will be set to 0
-; -all 0/1: Also include genotypes of samples that have a "u" in the sequenced or zyg field
+; -all 0/1: Also include genotypes of samples that have a "u" in the sequenced or zyg field.
+Default is 0, but if no sequenced or zyg field is present in the file, it
+is 1 (i.e. all genotypes are included)
 
 == Category ==
 Analysis
