--- a/docs/format_tsv.wiki
+++ b/docs/format_tsv.wiki
@@ -80,7 +80,7 @@ The following fields have specific meanings in genomecomb:
 ; alleleSeq1: genotype of variant at one allele
 ; alleleSeq2: genotype of variant at other allele
 ; phased: order of genotypes in alleleSeq1 and alleleSeq2 is significant (phase is known)
-; quality: quality of the variant call (assigned by the variant caller)
+; quality: quality of the variant (or reference) call, assigned by the variant caller. Normally phred scaled: -10log_10 prob(call in ALT is wrong))
 ; coverage: number of reads used to call the variant (covering the variant). 
 This is as reported by the variant caller; Interpretation of coverage can differ
 between different callers
