--- a/docs/howto_process_project.wiki
+++ b/docs/howto_process_project.wiki
@@ -115,3 +115,44 @@ tmp/mixed_yri_mx2/compar/annot_compar-mixed_yri_mx2.tsv.lz4 tmp/utr2.tsv
 
 }}}
 
+== Referencing ==
+The following is an example text describing the default process_project
+workflow for Illumina sequencing with the proper references (The <version>
+actually used for the various tools can be found in the analysisinfo files):
+
+{{{
+Analysis was performed using the pipeline integrated in genomecomb (1) The
+pipeline used fastq-mcf (2) for adapter clipping. Reads were then aligned
+using bwa mem (3) and the resulting sam file converted to bam using
+samtools (4). Bam files were sorted and duplicates were removed using
+biobambam bammarkduplicates2 (5). Realignment in the neighborhood of
+indels was performed with GATK (6). Variants were called at all positions
+with a totalcoverage >= 5 using both GATK (6) and samtools (4). At this
+initial stage positions with a coverage < 5 or a quality < 30 were
+considered unsequenced. The resulting variant sets of different
+individuals were combined and annotated using genomecomb (1).
+
+(1) genomecomb version <version>, Reumers, J*, De Rijk, P*, Zhao, H, Liekens, A, Smeets, D, Cleary, J, Van Loo, P, Van Den Bossche, M, Catthoor, K, Sabbe, B, Despierre, E, Vergote, I, Hilbush, B, Lambrechts, D and Del-Favero, J (2011) Optimized filtering reduces the error rate in detecting genomic variants by short-read sequencing. Nature biotechnology, 30, 61-88 [PMID: 22178994]
+(2) fastq-mcf version <version>, Erik Aronesty (2011). ea-utils : "Command-line tools for processing biological sequencing data"; Expression Analysis, Durham, NC http://code.google.com/p/ea-utils
+(3) bwa version <version>, Li H. and Durbin R. (2009) Fast and accurate short read alignment with Burrows-Wheeler Transform. Bioinformatics, 25:1754-60. [PMID: 19451168] 
+(4) samtools version <version>, Li H.*, Handsaker B.*, Wysoker A., Fennell T., Ruan J., Homer N., Marth G., Abecasis G., Durbin R. and 1000 Genome Project Data Processing Subgroup (2009) The Sequence alignment/map (SAM) format and SAMtools. Bioinformatics, 25, 2078-9. [PMID: 19505943] 
+(5) biobambam <version>, Tischler G., Leonard S. (2013) Biobambam: Tools for read pair collation based algorithms on BAM files. Source Code for Biology and Medicine 9(1)
+(6) GATK version <version>, DePristo M, Banks E, Poplin R, Garimella K, Maguire J, Hartl C, Philippakis A, del Angel G, Rivas MA, Hanna M, McKenna A, Fennell T, Kernytsky A, Sivachenko A, Cibulskis K, Gabriel S, Altshuler D, Daly M (2011) A framework for variation discovery and genotyping using next-generation DNA sequencing data.  NATURE GENETICS 43:491-498 [PMID: 21478889]
+}}}
+
+=== Variations ===
+For amplicon sequencing, remove the markduplicates part, and add
+{{{Amplicon primers were clipped using genomecomb (1)}}}
+after making the realignment.
+
+If freebayes was used to call variants, add it to the list of variant callers, also
+for freebayes, genoqual is used for determining unsequenced (freebayes
+does not give the correct value in quality for doing this), e.g.:
+
+{{{
+... and freebayes (x). For GATK, positions with a coverage < 5 or a quality score < 30 were
+considered unsequenced. For freebayes coverage < 5 or a genotype quality < 30
+was used as a cut-off.
+
+(x) freebayes version <version>, Garrison E, Marth G. Haplotype-based variant detection from short-read sequencing. arXiv preprint arXiv:1207.3907 [q-bio.GN] 2012
+}}}
