--- a/docs/joboptions.wiki
+++ b/docs/joboptions.wiki
@@ -77,4 +77,4 @@ use --skipjoberrors 1 to skip over these errors and complete other jobs (as far 
 dependent on the the job with an error) (also -skipjoberrors)
 
 == Category ==
-Conversion
+Format Conversion
