--- a/lib/cg_bcol_get.wiki
+++ b/lib/cg_bcol_get.wiki
@@ -16,4 +16,4 @@ returns them as a (space separated) list.
 ; **end**: end position (counts from 0, excluded)
 
 == Category ==
-Conversion
+Format Conversion
