--- a/lib/cg_bcol_make.wiki
+++ b/lib/cg_bcol_make.wiki
@@ -49,4 +49,4 @@ assigned to. If a name in **multilist** is not present in this list for a row, t
 default value will be assigned.
 
 == Category ==
-Conversion
+Format Conversion
