--- a/lib/cg_colvalue.wiki
+++ b/lib/cg_colvalue.wiki
@@ -31,4 +31,4 @@ field is given, the fieldnames will be constructed by concatenating the values w
 ; -valuefield: field containing the value (default value)
 
 == Category ==
-Conversion
+Format Conversion
