--- a/lib/cg_convcgsv.wiki
+++ b/lib/cg_convcgsv.wiki
@@ -11,4 +11,4 @@ Convert the Complete Genomics SV files to the cg format
 ; **dstfile**: resulting sft sv file
 
 == Category ==
-Conversion
+Format Conversion
