--- a/lib/cg_keyvalue.wiki
+++ b/lib/cg_keyvalue.wiki
@@ -27,4 +27,4 @@ The actual sample value is extracted from the fieldname (field-sample).
 genomecomb output, e.g. -gatk-rdsbwa-sample1) are split up in separate fields with the field names given by **samplefields**
 
 == Category ==
-Conversion
+Format Conversion
