--- a/lib/cg_tsvjoin.wiki
+++ b/lib/cg_tsvjoin.wiki
@@ -31,4 +31,4 @@ are empty. A **right** join contains all lines in file2 and a **full** join has 
 in both files, putting empty values where needed.
 
 == Category ==
-Conversion
+tsv
