--- a/lib/cg_bcol_table.wiki
+++ b/lib/cg_bcol_table.wiki
@@ -23,4 +23,4 @@ variant annotation (a different score for each potential alternative allele).
 ; **-p precision** (--precision): output precision for floating point data (default precision is stored in the bcol file)
 
 == Category ==
-Conversion
+Format Conversion
