--- a/lib/cg_bed2tsv.wiki
+++ b/lib/cg_bed2tsv.wiki
@@ -11,4 +11,4 @@ Converts data in bed format to [[tsv]] format
 ; **outfile**: write results to outfile, if not given, uses stdout
 
 == Category ==
-Conversion
+Format Conversion
