--- a/lib/cg_gff2tsv.wiki
+++ b/lib/cg_gff2tsv.wiki
@@ -1,7 +1,7 @@
-= gff2sft =
+= gff2tsv =
 
 == Format ==
-cg gff2sft ?infile? ?outfile?
+cg gff2tsv ?infile? ?outfile?
 
 == Summary ==
 Converts data in gff format to gene sft (simple feature table) format
@@ -11,4 +11,4 @@ Converts data in gff format to gene sft (simple feature table) format
 ; **outfile**: write results to outfile, if not given, uses stdout
 
 == Category ==
-Conversion
+Format Conversion
