--- a/lib/cg_gtf2tsv.wiki
+++ b/lib/cg_gtf2tsv.wiki
@@ -1,7 +1,7 @@
-= Gtf2sft =
+= Gtf2tsv =
 
 == Format ==
-cg gtf2sft ?infile? ?outfile?
+cg gtf2tsv ?infile? ?outfile?
 
 == Summary ==
 Converts data in gtf format to gene sft (simple feature table) format
@@ -11,4 +11,4 @@ Converts data in gtf format to gene sft (simple feature table) format
 ; **outfile**: write results to outfile, if not given, uses stdout
 
 == Category ==
-Conversion
+Format Conversion
