--- a/lib/cg_pmulticompar.wiki
+++ b/lib/cg_pmulticompar.wiki
@@ -79,8 +79,8 @@ they are not present in any of the samples.
 A column will be added to indicate for each variant if it was in the targetvarsfile. The name of the 
 column will be the part of the filename after the last dash. If **variantfile** contains a "name" column, 
 the content of this will be used in the targets column instead of a 1.
-; **-s 0/1** (-split --split): if 1, multiple alternative alleles will be on a separate lines, treated mostly as a separate variant
-Use 0 for the default (alternatives alleles are on the same line, separated by comma in the alt field)
+; **-s 0/1** (-split --split): if 1 (default), multiple alternative alleles will be on a separate lines, treated mostly as a separate variant
+Use 0 for giving alternatives alleles on the same line, separated by comma in the alt field
 ; **-e 0/1** (--erroronduplicates): if 1, an error is given if one of the samples to be added is
 alread present in the multicompar file. The default (0) is to skip these.
 ; **-i 0/1** (--skipincomplete): if set to 0, pmulticompar will stop
