--- a/lib/cg_svmulticompar.wiki
+++ b/lib/cg_svmulticompar.wiki
@@ -24,8 +24,8 @@ More than one svfile can added in one command
 
 == Options ==
 ; -margin number: Allow begin and end to deviate the number of bases given (default 30)
-; -lmargin number: Allow begin and end to deviate the number of bases given for deletions and inversion (default 300)
-; -minoverlap number: minimum percent overlap needed to identify deletions or inversions as the same (default 80)
+; -lmargin number: Allow begin and end to deviate the number of bases given for deletions and inversions (default 300)
+; -minoverlap number: minimum percent overlap needed to identify deletions or inversions as the same (default 75)
 
 == Category ==
 Structural variants
