--- a/lib/cg_select.wiki
+++ b/lib/cg_select.wiki
@@ -249,7 +249,7 @@ The following functions allow use of vectors in queries
 ; **lindex(vector, position)**: the value of the element at the given **position** in the list. The first element is at position 0!
 ; **lrange(vector, start, end)**: the a sublist of vector from element at position **start** up to and including the element at **end**. The first element is at position 0!
 ; **lsearch(vector, element, ?args?)**: returns the position of **element** in the list **vector**. If "-glob" is given as an extra argument, **element** can be a glob pattern.
-; **llen(vector)**: number of elements in the vector
+; **llen(vector)**: number of elements in the vector (also **llength**)
 ; **lmin(vector, ...)**: the minimum of the list of numbers in vector(s). A default value (NaN or not a number) is given for non-numeric characters (-); any comparison with NaN is false.
 ; **lmax(vector, ...)**: the maximum of the vector. A default value (NaN or not a number) is given for non-numeric characters (-); any comparison with NaN is false.
 ; **lmind(vector, ..., def)**: same as lmin, but you can set the default value for non-numeric characters is given as the last parameter
