--- a/docs/jobsystem.wiki
+++ b/docs/jobsystem.wiki
@@ -31,7 +31,7 @@ If it is > 0, they will output a lot of info (to stder) on dependencies, jobs st
 ; --skipjoberrors 0/1: Errors in one job can cause the command to stop; 
 use --skipjoberrors 1 to skip over these errors and complete other jobs (as far as they are not
 dependent on the the job with an error)
-; --runcmd cmd (--runcommand): For distributed processing, the command used to run job scripts made (default is "cg source")
+; --runcmd cmd (--runcommand): For distributed processing, the command used to run job scripts made (default is "cg source -stack 1")
 
 Typical use:
 {{{
