--- a/lib/cg_long.wiki
+++ b/lib/cg_long.wiki
@@ -4,9 +4,8 @@
 cg long ?infile? ?outfile?
 
 == Summary ==
-Converts data in tsv format from wide format (data for each sample in separate columns) 
-to long format (data for each sample in separate lines)
-
+Converts data in tsv format from wide format (data for each sample/analysis in separate columns) 
+to long format (data for each sample/analysis in separate lines)
 
 == Description ==
 Genomecomb usually expects data in tsv files in wide format, where some fields are common/general
@@ -22,6 +21,26 @@ lines (the common fields are repeated in each line).
 ; **outfile**: write results to outfile, if not given, uses stdout
 
 == Options ==
+; -type sample/analysis: determines whether lines are separated on sample (part after last -) or analysis (part after first -)
+e.g. 
+{{{
+var	zyg-gatk-bwa-sample1	zyg-sam-bwa-sample1	zyg-gatk-bwa-sample2
+test	v	u	r
+}}}
+using sample this will be split to
+{{{
+var	sample	zyg-gatk-bwa	zyg-sam-bwa	zyg-gatk-bwa-sample2
+test	sample1	v	u
+test	sample2	r	
+}}}
+using analysis this will be split to
+{{{
+var	sample	zyg
+test	gatk-bwa-sample1	v
+test	gatk-sam-sample1	u
+test	gatk-bwa-sample2	r	
+}}}
+Even though the analysis is now used, the name of the column is still sample! (to allow the use of sampleinfo files)
 ; -norm 1/0: If 1, output "normalized" long tables: The normal output will contain only variant 
 data with a numeric id, without the data specific for each sample. 
 An extra tsv file is generated (<outfile>.sampledata.tsv) that contains the sample specific data, one line
